# simple-software-renderer

./: .gitmodules  CMakeLists.txt  README.md
assets/: Geforce8500.3DS  Geforce8500.mtl
src/: data.cpp  init.cpp  load_mesh.cpp  main.cpp  raster_triangle.cpp  raster_triangle_helper_funcs.cpp  renderer.cpp  ssr.hpp  texture.cpp  vertex_shader.cpp
